# footswitchmidi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  footswitch.hpp  jackmidi.hpp  main.cpp  messagequeue.hpp  osc.hpp
